spec/fixtures/haxe_projects/fail_compile/Main.hx
package ;

class Main {

    static function put(str:String): Void {
        trace(str);
    }

    static function main() {
        put(100);
    }

}